After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779005 - GtkFrame: Fix shadow after theme changes
GtkFrame: Fix shadow after theme changes
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2017-02-21 10:20 UTC by Florian Müllner
Modified: 2017-02-21 13:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GtkFrame: Fix shadow after theme changes (1.21 KB, patch)
2017-02-21 10:20 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2017-02-21 10:20:46 UTC
See patch.
Comment 1 Florian Müllner 2017-02-21 10:20:52 UTC
Created attachment 346307 [details] [review]
GtkFrame: Fix shadow after theme changes

Commit 0c20604932f changed the theme to expect the .flat class on
the frame node rather than the border one, but didn't update the
code that applies the style according to the :shadow-type property.
Comment 2 Daniel Boles 2017-02-21 11:52:48 UTC
Review of attachment 346307 [details] [review]:

Absolutely. I was just about to push the same thing, before Timm linked me to this. Thanks!
Comment 3 Daniel Boles 2017-02-21 11:53:40 UTC
Comment on attachment 346307 [details] [review]
GtkFrame: Fix shadow after theme changes

oops, wrong status